@@ -8,15 +8,14 @@
 
 package org.elasticsearch.search.aggregations.pipeline;
 
-import org.elasticsearch.common.xcontent.ObjectParser;
-import org.elasticsearch.common.xcontent.XContentBuilder;
-import org.elasticsearch.common.xcontent.XContentParser;
 import org.elasticsearch.search.aggregations.metrics.ParsedPercentiles;
 import org.elasticsearch.search.aggregations.metrics.Percentiles;
+import org.elasticsearch.xcontent.ObjectParser;
+import org.elasticsearch.xcontent.XContentBuilder;
+import org.elasticsearch.xcontent.XContentParser;
 
 import java.io.IOException;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 
 public class ParsedPercentilesBucket extends ParsedPercentiles implements Percentiles {
 
@@ -29,8 +28,13 @@ public class ParsedPercentilesBucket extends ParsedPercentiles implements Percen
     public double percentile(double percent) throws IllegalArgumentException {
         Double value = percentiles.get(percent);
         if (value == null) {
-            throw new IllegalArgumentException("Percent requested [" + String.valueOf(percent) + "] was not" +
-                    " one of the computed percentiles. Available keys are: " + percentiles.keySet());
+            throw new IllegalArgumentException(
+                "Percent requested ["
+                    + String.valueOf(percent)
+                    + "] was not"
+                    + " one of the computed percentiles. Available keys are: "
+                    + percentiles.keySet()
+            );
         }
         return value;
     }
@@ -53,7 +57,7 @@ public class ParsedPercentilesBucket extends ParsedPercentiles implements Percen
 
     @Override
     public Iterable<String> valueNames() {
-        return percentiles.keySet().stream().map(d -> d.toString()).collect(Collectors.toList());
+        return percentiles.keySet().stream().map(d -> d.toString()).toList();
     }
 
     @Override
@@ -73,8 +77,11 @@ public class ParsedPercentilesBucket extends ParsedPercentiles implements Percen
         return builder;
     }
 
-    private static final ObjectParser<ParsedPercentilesBucket, Void> PARSER =
-            new ObjectParser<>(ParsedPercentilesBucket.class.getSimpleName(), true, ParsedPercentilesBucket::new);
+    private static final ObjectParser<ParsedPercentilesBucket, Void> PARSER = new ObjectParser<>(
+        ParsedPercentilesBucket.class.getSimpleName(),
+        true,
+        ParsedPercentilesBucket::new
+    );
 
     static {
         ParsedPercentiles.declarePercentilesFields(PARSER);
