@@ -8,8 +8,6 @@
 
 package org.elasticsearch.index.translog;
 
-import com.carrotsearch.hppc.LongHashSet;
-import com.carrotsearch.hppc.LongSet;
 import org.elasticsearch.ElasticsearchException;
 import org.hamcrest.Description;
 import org.hamcrest.Matcher;
@@ -18,9 +16,9 @@ import org.hamcrest.TypeSafeMatcher;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashSet;
 import java.util.List;
-import java.util.stream.Collectors;
-
+import java.util.Set;
 
 public final class SnapshotMatchers {
     private SnapshotMatchers() {
@@ -154,12 +152,8 @@ public final class SnapshotMatchers {
         protected boolean matchesSafely(Translog.Snapshot snapshot) {
             try {
                 List<Translog.Operation> actualOps = drainAll(snapshot);
-                notFoundOps = expectedOps.stream()
-                    .filter(o -> actualOps.contains(o) == false)
-                    .collect(Collectors.toList());
-                notExpectedOps = actualOps.stream()
-                    .filter(o -> expectedOps.contains(o) == false)
-                    .collect(Collectors.toList());
+                notFoundOps = expectedOps.stream().filter(o -> actualOps.contains(o) == false).toList();
+                notExpectedOps = actualOps.stream().filter(o -> expectedOps.contains(o) == false).toList();
                 return notFoundOps.isEmpty() && notExpectedOps.isEmpty();
             } catch (IOException ex) {
                 throw new ElasticsearchException("failed to read snapshot content", ex);
@@ -169,23 +163,19 @@ public final class SnapshotMatchers {
         @Override
         protected void describeMismatchSafely(Translog.Snapshot snapshot, Description mismatchDescription) {
             if (notFoundOps.isEmpty() == false) {
-                mismatchDescription
-                    .appendText("not found ").appendValueList("[", ", ", "]", notFoundOps);
+                mismatchDescription.appendText("not found ").appendValueList("[", ", ", "]", notFoundOps);
             }
             if (notExpectedOps.isEmpty() == false) {
                 if (notFoundOps.isEmpty() == false) {
                     mismatchDescription.appendText("; ");
                 }
-                mismatchDescription
-                    .appendText("not expected ").appendValueList("[", ", ", "]", notExpectedOps);
+                mismatchDescription.appendText("not expected ").appendValueList("[", ", ", "]", notExpectedOps);
             }
         }
 
         @Override
         public void describeTo(Description description) {
-            description.appendText("snapshot contains ")
-                .appendValueList("[", ", ", "]", expectedOps)
-                .appendText(" in any order.");
+            description.appendText("snapshot contains ").appendValueList("[", ", ", "]", expectedOps).appendText(" in any order.");
         }
     }
 
@@ -202,7 +192,7 @@ public final class SnapshotMatchers {
         @Override
         protected boolean matchesSafely(Translog.Snapshot snapshot) {
             try {
-                final LongSet seqNoList = new LongHashSet();
+                final Set<Long> seqNoList = new HashSet<>();
                 Translog.Operation op;
                 while ((op = snapshot.next()) != null) {
                     seqNoList.add(op.seqNo());
@@ -220,8 +210,7 @@ public final class SnapshotMatchers {
 
         @Override
         protected void describeMismatchSafely(Translog.Snapshot snapshot, Description mismatchDescription) {
-            mismatchDescription
-                .appendText("not found seqno ").appendValueList("[", ", ", "]", notFoundSeqNo);
+            mismatchDescription.appendText("not found seqno ").appendValueList("[", ", ", "]", notFoundSeqNo);
         }
 
         @Override
